# amigao

./: .coverage  .dockerignore  .env.example  .env.production.example  .fix.py  .gitignore  CLAUDE.md  CONTEXTO_ARQUITETURAL.md  Dockerfile  api_logs.txt  auditoria1.md  auditoria2.md  docker-compose.override.yml  docker-compose.yml  implementation_plan.md  mempalace.yaml  pyproject.toml  requirements.txt  seed.py  worker_logs.txt
alembic/: env.py
app/: main.py
client-portal/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
docs/: ANALISE_E_ORIENTACOES_TIME.md  Aditivo_arquitetural_política_multi_LLM.md  AgenteRegulatorio_BaseCuradoria.md  Agente_Ambiental.md  Arquiteturadetalhada.md  Backlogfuncionalportela.md  Diagramatextualcompletodaarquitetura.md  DocumentodeFluxosEndtoEnd.md  DocumentodeIntegraçõesGovTech.md  DocumentodeObservabilidade.md  DocumentodeRegrasdeNegocio.md  EspecificaçãodaAPIv1.md  EstrategiaVersaoAPI.md  Formalizaçãodapolíticawhitelabel.md  Governança deIA.md  MUDANCAS_REGENTE.md  ModelagemdeBancodeDados.md  ModelagemdeBancodeDados_ADITIVOV1.md  ObservabilidadeOperacional.md  PLANO_MESTRE_CORRECOES.md  PLANO_SPRINTS_CORRECOES.md  PRDPRODUCTREQUIREMENTSDOCUMENT.md  PROMPTS_AGENTES.md  PlanodeExecucao.md  PoliticaRetencaoDados.md  RESUMO_SESSAO_2026-04-23.md  RESUMO_SESSAO_2026-04-27.md  RESUMO_SESSAO_2026-04-28.md  RunbookOperacional.md  SPRINT1.md  SeedDadosDev.md  SegurançaLGPDeConformidade.md  auditoria3implemantation.md  mempalace.md  mvp1_diagnostico.md  progresso1.md  progresso1_CORRIGIDO.md  progresso2.md  progresso3.md  progresso4.md  (+3 more)
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
mobile/: .env.example  app.json  package-lock.json  package.json
ops/: alert_webhook_sink.py  check_migrations.sh  check_smtp.py  production-secrets-checklist.md  prometheus-alerts.yml  provision_homologation_tenant.py  (+1 more)
(+295 files in other folders)
